# BerserkerQuake2

./: .gitignore  Berserker.cbp  Berserker.sln  Game.cbp  Makefile  README.md  anorms.h  compat.h  data.h  defs.h  game.c  gamedata.h  m_flash.h  m_frames.h  main.c  meson.build  q2pal.h  unpak.c  unpak.h  unzip.c  unzip.h  warpsin.h
Berserker/: Berserker.rc  Berserker.vcxproj  Berserker.vcxproj.filters  resource.h
Game/: Game.vcxproj  Game.vcxproj.filters  resource.h
include/: jconfig.h
lib/: jpeg.lib  jpeg8.lib  libpng13.lib  libpng16.lib  libvorbis.lib  libvorbisfile.lib  zlibwapi.lib
lib/x64/: jpeg8.lib  libpng16.lib  libvorbis.lib  libvorbisfile.lib  zlib.lib
lib/x86/: zlib.lib
